- minor spacing fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,6 +28,12 @@ $h-size-6: 1em !default; // ~16px
 @import "{{ site.theme }}";
 
 
+#main {
+    padding-top: 1em;
+    padding-left: 0em !important;
+    padding-right: 0em !important;
+}
+
 html {
     background-color: #ffffff;
     font-size: 18px !important;
@@ -47,6 +53,7 @@ html {
   
 .sidebar {
     opacity: 1.0 !important;
+    padding-right: 4em;
 }
 
 .masthead {
